--- a/ShoppingCart/src/main/resources/templates/login.html
+++ b/ShoppingCart/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <form th:action="@{/j_spring_security_check}" method="POST">
+    <form th:action="@{/login}" method="post">
 
         <div th:if="${param.error}">
             <div class="alert alert-danger">
@@ -22,11 +22,11 @@
         </div>
 
         <div class="form-group">
-            <input type="text" placeholder="Username" id="username" class="form-control" required="true" autofocus="true"/>
+            <input type="text" placeholder="Username" id="username" name="username" class="form-control" required="true" autofocus="true"/>
         </div>
 
         <div class="form-group">
-            <input type="password" placeholder="Password" id="password" class="form-control" required="true" autofocus="true"/>
+            <input type="password" placeholder="Password" id="password" name="password" class="form-control" required="true" autofocus="true"/>
         </div>
 
         <div>
